--- a/MitchellStry/Homework/Homework12/homework 12.ipynb
+++ b/MitchellStry/Homework/Homework12/homework 12.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b74c7dfe",
    "metadata": {},
    "outputs": [],
@@ -44,12 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "f57d31c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=[6,3,0,5,7,2]\n"
+    "a=[6,3,0,5,7,2]\n",
+    "b=[6,3,0,5,7,2,4,3]\n",
+    "c=[2,5,4,3,1,7,8,10,11]\n",
+    "d=[1,6,4,8]\n",
+    "e=[10,12,15,3,8,7,6,9,14,18]\n",
+    "\n",
+    "g=[22,23,88,50,47,64,8]\n",
+    "h=[10,12,15,3,8,7,6,9,14,18,10,12,15,3,8,7,6,9,14,18]\n",
+    "\n",
+    "j=[29, 29, 28, 27, 26, 26, 25, 25, 24, 24, 23, 22, 22, 21, 20, 20, 19, 18, 18, 15, 14, 12, 10, 9, 9, 8, 7, 5, 4, 1]\n",
+    "k=[40, 39, 39, 39, 38, 38, 37, 37, 36, 34, 32, 31, 31, 30, 25, 23, 22, 22, 21, 20, 15, 15, 15, 15, 14, 14, 14, 11, 10, 7, 6, 6, 6, 5, 4, 3, 3, 2, 2, 1]\n",
+    "m=[49, 49, 47, 47, 47, 46, 46, 44, 43, 43, 42, 42, 42, 42, 41, 38, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 27, 24, 23, 22, 22, 19, 15, 14, 11, 10, 10, 9, 9, 8, 7, 6, 6, 6, 4, 3, 1, 1, 1, 1]\n",
+    "o=[78, 77, 75, 74, 74, 74, 74, 73, 71, 71, 69, 69, 69, 69, 68, 68, 68, 67, 67, 67, 66, 66, 65, 63, 62, 61, 61, 60, 59, 58, 58, 57, 56, 56, 54, 54, 53, 52, 50, 50, 49, 47, 47, 46, 44, 43, 40, 38, 37, 37, 37, 36, 34, 34, 33, 32, 31, 30, 29, 26, 26, 24, 22, 20, 19, 18, 15, 14, 13, 13, 11, 10, 9, 8, 7, 5, 4, 3, 2, 2]"
    ]
   },
   {
@@ -78,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=[6,3,0,5,7,2,4,3]\n"
+    "\n"
    ]
   },
   {
@@ -106,9 +118,7 @@
    "id": "3aee55ca",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "c=[2,5,4,3,1,7,8,10,11]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -135,9 +145,7 @@
    "id": "11873655",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "d=[1,6,4,8]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -164,9 +172,7 @@
    "id": "9d18f147",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "e=[10,12,15,3,8,7,6,9,14,18]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -218,12 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "081025b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.6 µs ± 219 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "g=[22,23,88,50,47,64,8]"
+    "%%timeit\n",
+    "bubsort(h)"
    ]
   },
   {
@@ -247,7 +262,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
+   "id": "a024d9e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.8 µs ± 529 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "bubsort(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7ce8caad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120 µs ± 1.77 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "bubsort(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a9a9c06e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "184 µs ± 1.17 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "bubsort(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "75dc24d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "474 µs ± 4.71 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "bubsort(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "94879c86",
    "metadata": {},
    "outputs": [],
@@ -416,8 +507,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6c9c67c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.3 µs ± 185 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "mergesort(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4c3740dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27 µs ± 207 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "mergesort(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "87474409",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.3 µs ± 641 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "mergesort(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4dbfc61b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53 µs ± 672 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "mergesort(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1a780876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.2 µs ± 916 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "mergesort(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d668e805",
    "metadata": {},
    "outputs": [],
    "source": []
